# Corewar

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO-igor.md  TODO_igor  add.c  aff.c  and.c  asm_word.h  assembler.c  author  champions.py  check.c  check_args.c  checker.ipynb  checker.py  colors.py  corewar  corewar.c  error_handler.c  errors.txt  exec.c  fork.c  free.c  ft_itoa_base.c  header_print.c  init.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  op_codes.c  options.h  or.c  parametrs_to_op_code.c  parse.c  (+12 more)
assembler/: op.h  options.h
assembler/assembler/: Makefile  asm_errors.h  asm_word.h  assembler.c  assembler.h  checks.c  comands_print.c  equals.c  header_print.c  len_command.c  make_headers.c  replace_label.c  sequen_tkns_test.c  skip_word.c  split_in_tkns.c  test_command.c  this_digit_word.c  this_special.c  tkn_error.c  tkn_populate.c  tkn_strcat.c
assembler/ft_printf/: Makefile
assembler/ft_printf/includes/: ft_ptintf.h  high_precision.h  my_float.h
assembler/ft_printf/srcs/: field_len.c  fill_union.c  ft_printf.c  get_binary.c  is_parser.c  make_field.c  parsing_funcs.c  parsing_generaly.c  set_buff.c  set_flags.c  to_buff.c  (+1 more)
assembler/libft/: ft_abs.c  ft_bzero.c  ft_fib.c  ft_is_complex_string.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstcirc_delelem.c  ft_lstcirc_findcontent_size.c  ft_lstcirc_strnew.c  ft_lstdelone.c  ft_lstpush.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putnbr.c  ft_putnbr_fd.c  ft_reverse.c  ft_sstrchr.c  ft_strchr.c  ft_strclr.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  (+20 more)
assembler/txt/: usage_assembler.txt
assembler2/assembler/: add_tkns_lst.c  assembler.h  len_command.c  scroll.c
assembler2/libft/: Makefile  ft_atoi.c  ft_lstcirc_add.c  ft_lstdel.c  ft_lstmap.c  ft_memccpy.c  ft_pow.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_sqrt.c  ft_strcat.c  ft_strcmp.c  ft_strdel.c  ft_strjoin.c  ft_strjoinre.c  ft_strstr.c  memlist.h  ml_strjoin.c  ml_strmapi.c
check_tests_vm/: fork.s  ld.s  ldi.s  st.s  sti.s  zjmp.s
debug_env/: check_work.sh  debuger.py  make_cor.sh  multiplayer_debuger.py  tester.py  vm_our  vm_ref  vm_vb  vm_ver_1  works_code
ft_printf/srcs/: prepare_lennum.c  str_tolower.c
ft_printf/srcsFloat/: check_create_float_res.c  e_flag_intf.c  float_intf.c  high_precision.c  my_float.c
incl/: corewar.h  parse.h
instructions/: add.s  aff.s  and.s  frok.s  ld.s  lfork.s  live.s  lld.s  lldi  or.s  script.sh  st.s  sti.s  sub.s  xor.s  zjmp.s
libft/: CMakeLists.txt  Makefile  ft_floor.c  ft_isascii.c  ft_isspace.c  ft_itoa_base.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_putchar_fd.c  ft_putendl.c  ft_putstr.c  ft_strlcat.c  ft_strmap.c  ft_strtrim.c  go_exit.c  libft.h  ml_get_next_line.c  ml_memalloc.c  ml_strdup.c  ml_strsub.c
mac-os-vm-champ/: robin.cor  robin.s  usage_asm.txt
op_codes/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
s-linux-mac/: 3.s
srcs/: check.c  check_args.c  check_args_2.c  corewar.c  debug_tools.c  error_handler.c  exec.c  free.c  init.c  op.c  op_codes.c  op_codes_2.c  op_codes_3.c  parametrs_to_op_code.c  parse-player.c  parse.c  parse_player.c  print.c  testbyteorder.c  utils.c  visual.c  visual_2.c  work-with-fd.c  work_with_fd.c
srcs1/: parse.c
txt/: errors.txt  usage_assembler.txt  usage_corewar.txt
visualiser/: corewar_visual.py
visualiser/cw_visual/: colors.py  state_manager.py  ui_widgets.py  view.py
visualiser2/: .gitignore  README.md  vm_output_emu.py
visualiser2/cpp_vm_output_emu/: CMakeLists.txt  vm_output.cpp
visualiser2/cw_visual/: cw_parser.py  stdin_listener.py  stylesheet.qss
vm_ft_printf/: CMakeLists.txt  Makefile  author  aux_pow_add.c  ft_printf.c  ft_printf.h  longdiv.c  longdouble.c  parser.c  parser_2.c  print_char.c  print_eg.c  print_float.c  print_float_2.c  print_float_3.c  print_frac.c  print_int.c  print_int_2.c  print_itoa.c  print_o.c  print_o_2.c  print_str.c  print_trash.c  print_uint.c  print_uint_2.c  print_utf.c
vm_ft_printf/libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lst_free.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_match.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_print_char_arr.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sort_word_tab.c  ft_stdin.c  (+30 more)
(+21 files in other folders)
