cmake_minimum_required(VERSION 3.14)

project(libftprntf)

add_library(ftprntf STATIC libft.h
        ft_isspace.c
        ft_lstnew.c
        ft_memset.c
        ft_putstr_fd.c
        ft_strdup.c
        ft_strncat.c
        ft_strsub.c
        ft_atoi_base.c
        ft_itoa_base.c
        ft_match.c
        ft_print_char_arr.c
        ft_sort_word_tab.c
        ft_strequ.c
        ft_strncmp.c
        ft_strtrim.c
        ft_atoi.c
        ft_itoa.c
        ft_memalloc.c
        ft_putchar.c
        ft_stdin.c
        ft_striter.c
        ft_strncpy.c
        ft_tolower.c
        ft_bzero.c
        ft_lstadd.c
        ft_memccpy.c
        ft_putchar_fd.c
        ft_strcat.c
        ft_striteri.c
        ft_strnequ.c
        ft_toupper.c
        ft_isalnum.c
        ft_lstdel.c
        ft_memchr.c
        ft_putendl.c
        ft_strchr.c
        ft_strjoin.c
        ft_strnew.c
        get_next_line.c
        ft_isalpha.c
        ft_lstdelone.c
        ft_memcmp.c
        ft_putendl_fd.c
        ft_strclr.c
        ft_strlcat.c
        ft_strnstr.c
        ft_isascii.c
        ft_lst_free.c
        ft_memcpy.c
        ft_putnbr.c
        ft_strcmp.c
        ft_strlen.c
        ft_strrchr.c
        ft_isdigit.c
        ft_lstiter.c
        ft_memdel.c
        ft_putnbr_fd.c
        ft_strcpy.c
        ft_strmap.c
        ft_strsplit.c
        ft_isprint.c
        ft_lstmap.c
        ft_memmove.c
        ft_putstr.c
        ft_strdel.c
        ft_strmapi.c
        ft_strstr.c
        )